--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.nodes.movies">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".NodesMoviesApp"
         android:allowBackup="true"
@@ -19,6 +21,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.moviedetails.MovieDetailsActivity" />
     </application>
 
 </manifest>
